* [*] Remove "Lazy Images" option that is no longer part of the Jetpack plugin [#23966]
* [*] Fix an issue with "Speed up your site" section not refreshing (fails silently) [#23966]
* [*] Fix an issue with small tap area of the ellipsis in the post list [#23973]
* [*] Avoid unexpectedly marking post content as unsaved. [#23969]
* [*] Fix an issue with Mastodon connection not working [#23981]

25.6
-----
* [*] [internal] Update Gravatar SDK to 3.0.0 [#23701]
* [*] Use the Gravatar Quick Editor to update the avatar [#23729]
* [*] (Hidden under a feature flag) User Management for self-hosted sites. [#23768]
* [*] Add URL and ID to the Media details screen, add IDs for posts [#23887]
* [*] Enable quick access to notifications from Reader on iPad [#23882]
* [*] Add support for restricted posts in Reader [#23853]
* [*] Fix minor appearance issues in the Blaze campaign list [#23891]
* [*] Improve the sidebar animations and layout on some iPad models [#23886]
* [*] Fix an issue with posts shown embedded in the notifications popover on iPad [#23889]

25.5
-----
* [***] Use web-based sign-in flow (hidden under a feature flag) [#23675]
* [*] Enable navigating to an individual post's stats from within the "view more" screen for author stats. [#23761]
* [*] [Jetpack-only] Enable pubishing to non-Jetpack sites when sharing content to the Jetpack app. [#23778]
* [*] Use the Gravatar Quick Editor to update the avatar [#23729]

25.4
-----


25.3
-----


25.2
-----

* [*] [Jetpack-only] Stats: Made optimizations to enhance scrolling performance. [#22847]
* [*] Simplify post list context menu sections [#23356]
* [*] Fix an issue with incorrect snackbar shown when saving drafts manually [#23358]
* [**] Support editing media metadata for sites not powered by Jetpack and reliant on XML-RPC [#23316]
* [*] Fix rare crash in the unsupported block editor [#23379]