@@ -46,6 +46,7 @@
 * [*] Fix an issue with small tap area of the ellipsis in the post list [#23973]
 * [*] Avoid unexpectedly marking post content as unsaved. [#23969]
 * [*] Fix an issue with Mastodon connection not working [#23981]
+* [**] Send feedback from within the experimental editor "more" options menu. [#23980]
 
 25.6
 -----
